ffi/tim2tox_ffi.h

// Initialize SDK; returns 1 on success, 0 on failure
int tim2tox_ffi_init(void);
// Initialize SDK with profile directory path (for multi-account).
// init_path: directory for storing tox profile (e.g. "<persistent_root>/p_<toxId_first16>");
//            if null or empty, behaves like tim2tox_ffi_init() (default path).
// Returns 1 on success, 0 on failure
int tim2tox_ffi_init_with_path(const char* init_path);
// Set file receive directory (should be called before receiving files)
// dir_path: path to directory for storing received files
// Returns 1 on success, 0 on failure
int tim2tox_ffi_set_file_recv_dir(const char* dir_path);
// Set unified log file path (should be called before tim2tox_ffi_init).
// C++ logs will be written in unified format to this file; console output is disabled.
void tim2tox_ffi_set_log_file(const char* path);
// Login; returns 1 on async start; completion is signaled by connection status and subsequent ops
int tim2tox_ffi_login(const char* user_id, const char* user_sig);
// R-08: Async login with explicit instance_id and completion callback.
// callback(success, error_code, error_message, user_data): success=1 on success, 0 on failure; error_message valid only during callback.
// Returns: 1 if login was started, 0 if instance not found / not inited / invalid args.
typedef void (*tim2tox_login_callback_t)(int success, int error_code, const char* error_message, void* user_data);
int tim2tox_ffi_login_async(int64_t instance_id, const char* user_id, const char* user_sig, tim2tox_login_callback_t callback, void* user_data);
// Add friend; returns 1 if request submitted
int tim2tox_ffi_add_friend(const char* user_id, const char* wording);
// Send C2C text; returns 1 if submitted
int tim2tox_ffi_send_c2c_text(const char* user_id, const char* text);
// Send C2C custom message; returns 1 if submitted
// data: raw bytes of custom data
// data_len: length of data in bytes
int tim2tox_ffi_send_c2c_custom(const char* user_id, const unsigned char* data, int data_len);
// Send group custom message; returns 1 if submitted
// data: raw bytes of custom data
// data_len: length of data in bytes
int tim2tox_ffi_send_group_custom(const char* group_id, const unsigned char* data, int data_len);
// Poll next received text message for the given instance (or broadcast events with instance_id 0).
// instance_id: current instance; only events for this instance or broadcast (id 0) are returned.
// Returns number of bytes written (excluding terminating 0), or 0 if none.
int tim2tox_ffi_poll_text(int64_t instance_id, char* buffer, int buffer_len);
// Poll next received custom/binary message. Returns bytes written into buffer or 0 if none.
int tim2tox_ffi_poll_custom(unsigned char* buffer, int buffer_len);
// Get current login user id into buffer; returns bytes written
int tim2tox_ffi_get_login_user(char* buffer, int buffer_len);
// Shutdown SDK
void tim2tox_ffi_uninit(void);
// Save tox profile to disk (same path as init). Call periodically or on app pause to reduce data loss on crash.
void tim2tox_ffi_save_tox_profile(void);
// Get friend list as newline-separated lines:
// "<userID>\t<nickName>\t<online>\n"
// nickName may be empty; online is 0 or 1.
// Returns number of bytes written, or 0 on error.
int tim2tox_ffi_get_friend_list(char* buffer, int buffer_len);
// Update self profile (nickname and status message). Returns 1 if request submitted.
int tim2tox_ffi_set_self_info(const char* nickname, const char* status_message);
// Friend applications list as lines:
// "<userID>\t<addWording>\n"
int tim2tox_ffi_get_friend_applications(char* buffer, int buffer_len);
// Same but for a specific instance_id (avoids GetCurrentInstance() being changed before native runs)
int tim2tox_ffi_get_friend_applications_for_instance(int64_t instance_id, char* buffer, int buffer_len);
// Accept a friend application by userID; returns 1 if submitted
int tim2tox_ffi_accept_friend(const char* user_id);
// Delete friend by userID; returns 1 if submitted
int tim2tox_ffi_delete_friend(const char* user_id);
// Typing indicator
int tim2tox_ffi_set_typing(const char* user_id, int typing_on);
// Groups (text)
// Create group with optional name; writes groupID into out buffer; returns bytes written
// group_type: "group" for new Tox Group API, "conference" for old Conference API
int tim2tox_ffi_create_group(const char* group_name, const char* group_type, char* out_group_id, int out_len);
int tim2tox_ffi_join_group(const char* group_id, const char* request_msg);
int tim2tox_ffi_send_group_text(const char* group_id, const char* text);
// Get known group IDs from global list (synchronized from Dart layer)
// Writes group IDs as newline-separated lines into buffer; returns bytes written, or 0 on error
int tim2tox_ffi_get_known_groups(int64_t instance_id, char* buffer, int buffer_len);
// File transfer (peer to peer): send a file to a friend
int tim2tox_ffi_send_file(int64_t instance_id, const char* user_id, const char* file_path);
// File transfer control: control a file transfer
// user_id: friend's user ID (hex string)
// file_number: file number from file request event
// control: 0=RESUME (accept/continue), 1=PAUSE, 2=CANCEL (reject/abort)
// Returns: 1 on success, negative on error (-1=invalid args, -2=friend not found, -3=file not found, -4=control failed)
int tim2tox_ffi_file_control(int64_t instance_id, const char* user_id, uint32_t file_number, int control);
// Get self connection status: returns 0=NONE, 1=TCP, 2=UDP
int tim2tox_ffi_get_self_connection_status(void);
// Get UDP port this Tox instance is bound to
// Returns port number on success, 0 on failure
int tim2tox_ffi_get_udp_port(int64_t instance_id);
// Get DHT ID (public key) of this Tox instance
// out_dht_id: output buffer for DHT ID (hex string, 64 characters)
// out_len: size of output buffer (should be at least 65 for null terminator)
// Returns: length of DHT ID string on success, 0 on error
int tim2tox_ffi_get_dht_id(char* out_dht_id, int out_len);
// Add bootstrap node and re-login: host, port, public_key_hex (64-char string)
// Returns 1 on success, 0 on failure
int tim2tox_ffi_add_bootstrap_node(int64_t instance_id, const char* host, int port, const char* public_key_hex);
// Callback-based notification (called from background native thread):
// event_type: 0=text, 1=custom
// sender: null-terminated UTF-8
// payload: UTF-8 bytes for text (without terminator), raw bytes for custom
// payload_len: number of bytes in payload
typedef void (*tim2tox_event_cb)(int event_type, const char* sender, const unsigned char* payload, int payload_len, void* user_data);
// Register callback; pass NULL to disable. user_data will be forwarded when invoking cb.
void tim2tox_ffi_set_callback(tim2tox_event_cb cb, void* user_data);
// ============================================================================
// DHT Nodes API
// ============================================================================

// Send DHT nodes request
// public_key: public key of the node to query (32 bytes, hex string)
// ip: IP address of the node to query (e.g., "127.0.0.1")
// port: UDP port of the node to query
// target_public_key: public key of the node we're looking for (32 bytes, hex string)
// Returns: 1 on success, 0 on failure
// Note: This function sends a request to the specified node asking for nodes close to target_public_key
int tim2tox_ffi_dht_send_nodes_request(const char* public_key, const char* ip, uint16_t port, const char* target_public_key);
// DHT nodes response callback type
// public_key: public key of the responding node (32 bytes, hex string)
// ip: IP address of the node (null-terminated string)
// port: UDP port of the node
// user_data: user data passed to callback
typedef void (*tim2tox_dht_nodes_response_callback_t)(const char* public_key, const char* ip, uint16_t port, void* user_data);
// Set DHT nodes response callback
// instance_id: instance ID (0 = use current instance)
// callback: callback function (can be NULL to disable)
// user_data: user data passed to callback
void tim2tox_ffi_set_dht_nodes_response_callback(int64_t instance_id, tim2tox_dht_nodes_response_callback_t callback, void* user_data);