dart/lib/ffi/tim2tox_ffi.dart


// Audio/Video (ToxAV) types (instance_id first; 0 = use current)
typedef _av_initialize_c = ffi.Int32 Function(ffi.Int64);
typedef _av_shutdown_c = ffi.Void Function(ffi.Int64);
typedef _av_iterate_c = ffi.Void Function(ffi.Int64);
typedef _av_start_call_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Uint32, ffi.Uint32);
typedef _av_answer_call_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Uint32, ffi.Uint32);
typedef _av_end_call_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32);
typedef _av_mute_audio_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Int32);
typedef _av_mute_video_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Int32);
typedef _av_send_audio_frame_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Pointer<ffi.Int16>, ffi.Size, ffi.Uint8, ffi.Uint32);
typedef _av_send_video_frame_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Uint16, ffi.Uint16, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, ffi.Int32, ffi.Int32, ffi.Int32);
typedef _av_set_audio_bit_rate_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Uint32);
typedef _av_set_video_bit_rate_c = ffi.Int32 Function(ffi.Int64, ffi.Uint32, ffi.Uint32);
typedef _av_call_callback_native = ffi.Void Function(
  ffi.Uint32, // friend_number
  ffi.Int32, // audio_enabled
  ffi.Int32, // video_enabled
  ffi.Pointer<ffi.Void>, // user_data
);
typedef _av_call_state_callback_native = ffi.Void Function(
  ffi.Uint32, // friend_number
  ffi.Uint32, // state
  ffi.Pointer<ffi.Void>, // user_data
);
typedef _av_audio_receive_callback_native = ffi.Void Function(
  ffi.Uint32, // friend_number
  ffi.Pointer<ffi.Int16>, // pcm
  ffi.Size, // sample_count
  ffi.Uint8, // channels
  ffi.Uint32, // sampling_rate
  ffi.Pointer<ffi.Void>, // user_data
);
typedef _av_video_receive_callback_native = ffi.Void Function(
  ffi.Uint32, // friend_number
  ffi.Uint16, // width
  ffi.Uint16, // height
  ffi.Pointer<ffi.Uint8>, // y
  ffi.Pointer<ffi.Uint8>, // u
  ffi.Pointer<ffi.Uint8>, // v
  ffi.Pointer<ffi.Void>, // user_data
);
typedef _av_set_call_callback_c = ffi.Void Function(
  ffi.Int64,
  ffi.Pointer<ffi.NativeFunction<_av_call_callback_native>>,
  ffi.Pointer<ffi.Void>,
);
typedef _av_set_call_state_callback_c = ffi.Void Function(
  ffi.Int64,
  ffi.Pointer<ffi.NativeFunction<_av_call_state_callback_native>>,
  ffi.Pointer<ffi.Void>,
);
typedef _av_set_audio_receive_callback_c = ffi.Void Function(
  ffi.Int64,
  ffi.Pointer<ffi.NativeFunction<_av_audio_receive_callback_native>>,
  ffi.Pointer<ffi.Void>,
);
typedef _av_set_video_receive_callback_c = ffi.Void Function(
  ffi.Int64,
  ffi.Pointer<ffi.NativeFunction<_av_video_receive_callback_native>>,
  ffi.Pointer<ffi.Void>,
);
typedef _get_friend_number_by_user_id_c = ffi.Uint32 Function(ffi.Pointer<pkgffi.Utf8>);
typedef _get_user_id_by_friend_number_c = ffi.Pointer<pkgffi.Utf8> Function(ffi.Uint32);

// Tox encryption/decryption function types
typedef _is_data_encrypted_c = ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Size);
typedef _pass_encrypt_c = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>, ffi.Size, // plaintext, plaintext_len
  ffi.Pointer<ffi.Uint8>, ffi.Size, // passphrase, passphrase_len
  ffi.Pointer<ffi.Uint8>, ffi.Size, // ciphertext, ciphertext_capacity
);
typedef _pass_decrypt_c = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>, ffi.Size, // ciphertext, ciphertext_len
  ffi.Pointer<ffi.Uint8>, ffi.Size, // passphrase, passphrase_len
  ffi.Pointer<ffi.Uint8>, ffi.Size, // plaintext, plaintext_capacity
);
typedef _extract_tox_id_from_profile_c = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>, ffi.Size, // profile_data, profile_len
  ffi.Pointer<ffi.Uint8>, ffi.Size, // passphrase, passphrase_len
  ffi.Pointer<ffi.Int8>, ffi.Size, // out_tox_id, out_tox_id_len
);
// Test-only: inject a raw JSON callback string into the Dart ReceivePort
typedef _inject_callback_c = ffi.Int32 Function(ffi.Pointer<pkgffi.Utf8>);

/// Low-level FFI bindings to tim2tox C library
class Tim2ToxFfi {
  Tim2ToxFfi._(this._lib);
  final ffi.DynamicLibrary _lib;
  
  late final int Function() init = _lib.lookupFunction<_init_c, int Function()>('tim2tox_ffi_init');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) initWithPath =
      _lib.lookupFunction<_init_with_path_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_init_with_path');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) setFileRecvDir = _lib.lookupFunction<_set_file_recv_dir_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_set_file_recv_dir');
  late final void Function(ffi.Pointer<pkgffi.Utf8>) setLogFileNative = _lib.lookupFunction<_set_log_file_c, void Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_set_log_file');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) login =
      _lib.lookupFunction<_login_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_login');
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.NativeFunction<_login_callback_native>>, ffi.Pointer<ffi.Void>) loginAsync =
      _lib.lookupFunction<_login_async_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.NativeFunction<_login_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_login_async');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) addFriend =
      _lib.lookupFunction<_add_friend_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_add_friend');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) sendText =
      _lib.lookupFunction<_send_text_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_send_c2c_text');
  late final int Function(int, ffi.Pointer<ffi.Int8>, int) pollText =
      _lib.lookupFunction<_poll_text_c, int Function(int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_poll_text');
  late final int Function(ffi.Pointer<ffi.Uint8>, int) pollCustom =
      _lib.lookupFunction<_poll_custom_c, int Function(ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_poll_custom');
  late final int Function(ffi.Pointer<ffi.Int8>, int) getLoginUser =
      _lib.lookupFunction<_get_login_user_c, int Function(ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_login_user');
  late final void Function() uninit = _lib.lookupFunction<_uninit_c, void Function()>('tim2tox_ffi_uninit');
  late final void Function() saveToxProfile = _lib.lookupFunction<_save_tox_profile_c, void Function()>('tim2tox_ffi_save_tox_profile');
  late final int Function(ffi.Pointer<ffi.Int8>, int) getFriendList =
      _lib.lookupFunction<_get_friend_list_c, int Function(ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_friend_list');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) setSelfInfo =
      _lib.lookupFunction<_set_self_info_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_set_self_info');
  late final int Function(ffi.Pointer<ffi.Int8>, int) getFriendApplications =
      _lib.lookupFunction<_get_friend_apps_c, int Function(ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_friend_applications');
  late final int Function(int, ffi.Pointer<ffi.Int8>, int) getFriendApplicationsForInstance =
      _lib.lookupFunction<_get_friend_apps_for_instance_c, int Function(int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_friend_applications_for_instance');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) acceptFriend =
      _lib.lookupFunction<_accept_friend_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_accept_friend');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) deleteFriend =
      _lib.lookupFunction<_delete_friend_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_delete_friend');
  late final void Function(ffi.Pointer<ffi.NativeFunction<_event_cb_native>>, ffi.Pointer<ffi.Void>) setCallback =
      _lib.lookupFunction<_set_callback_c, void Function(ffi.Pointer<ffi.NativeFunction<_event_cb_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_set_callback');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, int) setTyping =
      _lib.lookupFunction<_set_typing_c, int Function(ffi.Pointer<pkgffi.Utf8>, int)>('tim2tox_ffi_set_typing');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int) createGroup =
      _lib.lookupFunction<_create_group_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_create_group');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) joinGroup =
      _lib.lookupFunction<_join_group_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_join_group');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) sendGroupText =
      _lib.lookupFunction<_send_group_text_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_send_group_text');
  late final int Function(int, ffi.Pointer<ffi.Int8>, int) getKnownGroups =
      _lib.lookupFunction<_get_known_groups_c, int Function(int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_known_groups');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Uint8>, int) sendC2CCustomNative =
      _lib.lookupFunction<_send_c2c_custom_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_send_c2c_custom');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Uint8>, int) sendGroupCustomNative =
      _lib.lookupFunction<_send_group_custom_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_send_group_custom');
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) sendFileNative =
      _lib.lookupFunction<_send_file_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_send_file');
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, int, int) fileControlNative =
      _lib.lookupFunction<_file_control_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, int, int)>('tim2tox_ffi_file_control');
  late final int Function() getSelfConnectionStatus =
      _lib.lookupFunction<_get_self_connection_status_c, int Function()>('tim2tox_ffi_get_self_connection_status');
  late final int Function(int) getUdpPort =
      _lib.lookupFunction<_get_udp_port_c, int Function(int)>('tim2tox_ffi_get_udp_port');
  late final int Function(ffi.Pointer<ffi.Int8>, int) getDhtIdNative =
      _lib.lookupFunction<_get_dht_id_c, int Function(ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_dht_id');
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>) addBootstrapNode =
      _lib.lookupFunction<_add_bootstrap_node_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_add_bootstrap_node');
  // DHT nodes API
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>) dhtSendNodesRequestNative =
      _lib.lookupFunction<_dht_send_nodes_request_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_dht_send_nodes_request');
  late final void Function(int, ffi.Pointer<ffi.NativeFunction<_dht_nodes_response_callback_native>>, ffi.Pointer<ffi.Void>) setDhtNodesResponseCallbackNative =
      _lib.lookupFunction<_set_dht_nodes_response_callback_c, void Function(int, ffi.Pointer<ffi.NativeFunction<_dht_nodes_response_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_set_dht_nodes_response_callback');
